Fixed clipped swatches by changing size slightly

--- a/src/style/shared/color-input.less
+++ b/src/style/shared/color-input.less
@@ -85,8 +85,8 @@
 }
 
 .color-input__swatch__color {
-    width: 3.2rem;
-    height: 3.2rem;
+    width: 3.4rem;
+    height: 3.4rem;
     display: flex;
     align-items: center;
     flex-grow: 0;
@@ -106,8 +106,8 @@
 .color-input__empty {
     width: 3rem;
     height: 3rem;
-    margin-right: 1rem;
-    margin-top: 0.7rem;
+    margin-right: 1.2rem;
+    margin-top: 1.1rem;
     
     .fill__preview__disabled{
         border: @hairline solid @item-disabled;
@@ -135,16 +135,16 @@
 }
 
 .color-input__mixednone {
-    width: 6rem;
-    height: 6rem;
-    left: 0.4rem;
-    top: 0.8rem;    
+    width: 6.8rem;
+    height: 6.8rem;
+    left: 1.1rem;
+    top: 0.1rem;
     position: absolute;
     transform: rotate(45deg);
 }
 
 .color-input__mixed {    
     .color-input__mixednone {    
-        border: 4*@hairline solid @color-mixed;
+        border: 0.4rem solid @color-mixed;
     }
 }
